--- a/ansible/roles/snipe/templates/docker-compose.yaml.j2
+++ b/ansible/roles/snipe/templates/docker-compose.yaml.j2
@@ -1,26 +1,50 @@
 version: "3"
 
 services:
-  snipe-it:
-    image: docker.io/snipe/snipe-it:v6.2.3
+  app:
+    image: docker.io/snipe/snipe-it:v6.3.0
     volumes:
       - snipeit:/var/lib/snipeit
-      - snipeit-logs:/var/www/html/storage/logs
+      # - snipeit-logs:/var/www/html/storage/logs
     networks:
       - snipe
     links:
-      - snipe-db:db
+      - db:db
     environment:
       APP_ENV: production
       APP_DEBUG: false
       APP_KEY: key
-      APP_URL: https://snipe.energypulse.rs
+      APP_URL: http://snipe.energypulse.rs
       APP_TIMEZONE: Europe/Belgrade
       APP_LOCALE: en
       PHP_UPLOAD_LIMIT: 100
+      DB_CONNECTION: mysql
+      DB_HOST: db
+      DB_DATABASE: snipeit
+      DB_USERNAME: snipeit
+      DB_PASSWORD: snipeitpass
+      DB_PREFIX: null
+      DB_DUMP_PATH: '/usr/bin'
+      DB_CHARSET: utf8mb4
+      DB_COLLATION: utf8mb4_unicode_ci
+      PRIVATE_FILESYSTEM_DISK: local
+      PUBLIC_FILESYSTEM_DISK: local_public
+      MAIL_DRIVER: smtp
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_USERNAME: null
+      MAIL_PASSWORD: null
+      MAIL_ENCRYPTION: null
+      MAIL_FROM_ADDR: you@example.com
+      MAIL_FROM_NAME: 'Snipe-IT'
+      MAIL_REPLYTO_ADDR: you@example.com
+      MAIL_REPLYTO_NAME: 'Snipe-IT'
+      MAIL_AUTO_EMBED_METHOD: 'attachment'
+      IMAGE_LIB: gd
     ports:
-      - "8000:80"
-  snipe-db:
+      - "80:80"
+      - "443:443"
+  db:
     image: docker.io/library/mysql:5.6
     volumes:
       - snipeit-db:/var/lib/mysql
@@ -31,6 +55,13 @@ services:
       MYSQL_DATABASE: snipeit
       MYSQL_USER: snipeit
       MYSQL_PASSWORD: snipeitpass
+  mail:
+    image: mailhog/mailhog:v1.0.1
+    ports:
+    # - 1025:1025
+    - "8025:8025"
+    networks:
+    - snipe
 
 volumes:
   snipeit:
