--- a/ansible/roles/snipe/templates/docker-compose.yaml.j2
+++ b/ansible/roles/snipe/templates/docker-compose.yaml.j2
@@ -2,24 +2,30 @@ version: "3"
 
 services:
   app:
-    image: docker.io/snipe/snipe-it:v6.3.0
+    image: docker.io/snipe/snipe-it:v6.3.1
     volumes:
       - snipeit:/var/lib/snipeit
-      # - snipeit-logs:/var/www/html/storage/logs
+      - /home/ctrmgr/logs:/var/www/html/storage/logs
     networks:
       - snipe
     links:
       - db:db
     environment:
+      # basic app settings
       APP_ENV: production
       APP_DEBUG: false
-      APP_KEY: key
+      APP_KEY: base64:3ilviXqB9u6DX1NRcyWGJ+sjySF+H18CPDGb3+IVwMQ=
       APP_URL: http://snipe.energypulse.rs
       APP_TIMEZONE: Europe/Belgrade
       APP_LOCALE: en
-      PHP_UPLOAD_LIMIT: 100
+      MAX_RESULTS: 500
+      # uploaded file storage settings
+      PRIVATE_FILESYSTEM_DISK: local
+      PUBLIC_FILESYSTEM_DISK: local_public
+      # database settings
       DB_CONNECTION: mysql
       DB_HOST: db
+      DB_PORT: 3306
       DB_DATABASE: snipeit
       DB_USERNAME: snipeit
       DB_PASSWORD: snipeitpass
@@ -27,8 +33,7 @@ services:
       DB_DUMP_PATH: '/usr/bin'
       DB_CHARSET: utf8mb4
       DB_COLLATION: utf8mb4_unicode_ci
-      PRIVATE_FILESYSTEM_DISK: local
-      PUBLIC_FILESYSTEM_DISK: local_public
+      # outgoing mail server settings
       MAIL_DRIVER: smtp
       MAIL_HOST: mailhog
       MAIL_PORT: 1025
@@ -40,21 +45,24 @@ services:
       MAIL_REPLYTO_ADDR: you@example.com
       MAIL_REPLYTO_NAME: 'Snipe-IT'
       MAIL_AUTO_EMBED_METHOD: 'attachment'
+      # image library
       IMAGE_LIB: gd
     ports:
       - "80:80"
       - "443:443"
   db:
-    image: docker.io/library/mysql:5.6
+    image: docker.io/library/mariadb:10.6-focal
     volumes:
       - snipeit-db:/var/lib/mysql
     networks:
       - snipe
+    ports:
+      - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: snipeit
-      MYSQL_USER: snipeit
-      MYSQL_PASSWORD: snipeitpass
+      MARIADB_ROOT_PASSWORD: rootpass
+      MARIADB_DATABASE: snipeit
+      MARIADB_USER: snipeit
+      MARIADB_PASSWORD: snipeitpass
   mail:
     image: mailhog/mailhog:v1.0.1
     ports:
