--- a/ansible/roles/snipe/templates/docker-compose.yaml.j2
+++ b/ansible/roles/snipe/templates/docker-compose.yaml.j2
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   app:
-    image: docker.io/snipe/snipe-it:v6.3.1
+    image: ghcr.io/dusansimic/compose-snipe/snipe-it:v6.3.1
     volumes:
       - snipeit:/var/lib/snipeit
       - /home/ctrmgr/logs:/var/www/html/storage/logs
